# awdbedit

./: .gitmodules  CMakeLists.txt  ReadMe.md  awdbedit.dsw  readme.html
.github/workflows/: build.yml
.reuse/: dep5
awdbe_builtins/: CMakeLists.txt  builtins.cpp  builtins.dsp  builtins.h  builtins.rc  console.cpp  console.h  epa.cpp  epa.h  modbin.h  resource.h  sysbios.cpp  sysbios.h  sysbios_chipset.cpp  sysbios_chipset.h  sysbios_drive.cpp  sysbios_drive.h  sysbios_irqrouting.cpp  sysbios_irqrouting.h  sysbios_main.cpp  sysbios_main.h  sysbios_menu.cpp  sysbios_menu.h  sysbios_options.cpp  sysbios_options.h  sysbios_timing.cpp  sysbios_timing.h  types.h
awdbe_wavedit/: CMakeLists.txt  resource.h  types.h  wavedit.cpp  wavedit.dsp  wavedit.h  wavedit.rc
awdbedit/: CMakeLists.txt  api.hpp  awdbe_exports.h  awdbedit.dsp  awdbedit.rc  awdbedit_ids.h  bios.cpp  bios.h  config.cpp  config.h  lzh.cpp  lzh.h  main.cpp  main.h  plugin.cpp  plugin.h  popupDialog.cpp  popupDialog.h  popupMenu.cpp  popupMenu.h  resource.h  types.h
awdbedit/lzhEngine/: CMakeLists.txt  decode.cpp  encode.cpp  huf.cpp  io.cpp  lzhEngine.h  maketbl.cpp  maketree.cpp
docs/: docs.html
docs/sdk/: sdk.txt
